Thu Sep 18 15:02:15 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rubygems/test_gem_specification.rb: '/' is not always the root.

Thu Sep 18 09:36:37 2014  Scott Francis  <scott.francis@shopify.com>

	* vm_method.c (Init_Method): make global method cache size
	  configurable by environment variable
	  "RUBY_GLOBAL_METHOD_CACHE_SIZE"  [Fix GH-719]

Thu Sep 18 07:03:36 2014  Eric Wong  <e@80x24.org>

	* test/-ext-/string/test_modify_expand.rb: increase limit
	  for {je,tc}malloc [Bug #10236]

Thu Sep 18 06:41:18 2014  Eric Wong  <e@80x24.org>

	* ext/zlib/zlib.c (struct gzfile): pack (288 => 272 bytes) on 64-bit

Thu Sep 18 05:44:05 2014  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_connect): refactor for blocking
	  (wait_connectable): clear error before wait
	  [Bug #9356]

Wed Sep 17 23:12:36 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/rfc3986_parser.rb: specify a regexp for :OPAQUE; generic.rb
	  assumes it is present, and will refuse all values otherwise.
	  by Matthew Draper <matthew@trebex.net>
	  https://github.com/ruby/ruby/pull/718 fix GH-718

Wed Sep 17 16:22:58 2014  Eric Wong  <e@80x24.org>

	* ext/zlib/zlib.c (zlib_mem_alloc): check overflow

Wed Sep 17 11:33:35 2014  Laurent Arnoud  <laurent@spkdev.net>

	* test/fiddle/test_import.rb (Fiddle::TestImport#test_sizeof):
	  added test for long long [fix GH-716]

Wed Sep 17 11:09:21 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/rbinstall.rb: fixed invalid options with latest rubygems.
	  https://github.com/rubygems/rubygems/issues/1013

Tue Sep 16 19:19:00 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* benchmark/bm_app_aobench.rb: update outdated links to the
	  original program.  [ruby-dev:48550] [Feature #10247]

Tue Sep 16 01:06:40 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* reg*.c: Merge Onigmo 5.15.0 38a870960aa7370051a3544

Mon Sep 15 16:21:10 2014  Eric Wong  <e@80x24.org>

	* io.c (struct io_advise_struct): 32 => 24 bytes on 64-bit